[gd_scene load_steps=6 format=3 uid="uid://bh6srcfj8h0k0"]

[ext_resource type="Script" uid="uid://b06fbu74l35el" path="res://DemonPlayer/gun.gd" id="1_coawq"]
[ext_resource type="Texture2D" uid="uid://86464mahes61" path="res://DemonPlayer/gun.png" id="2_ou0ql"]
[ext_resource type="Texture2D" uid="uid://rtmsfy7rluqb" path="res://icon.svg" id="2_wbx3p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ol467"]
size = Vector2(52, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_xleyw"]
atlas = ExtResource("2_ou0ql")

[node name="Gun" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_coawq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(22, 0)
shape = SubResource("RectangleShape2D_ol467")

[node name="CrossHair" type="Marker2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="CrossHair"]
unique_name_in_owner = true
z_index = 1
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_xleyw")
hframes = 2
vframes = 2

[node name="ShootingPoint" type="Marker2D" parent="CrossHair"]
unique_name_in_owner = true
position = Vector2(23, -2)
scale = Vector2(0.40625, 0.109375)

[node name="SpriteOld" type="Sprite2D" parent="CrossHair"]
visible = false
position = Vector2(22, 0)
scale = Vector2(0.40625, 0.109375)
texture = ExtResource("2_wbx3p")

[node name="ReloadTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.8
one_shot = true

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
